--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.54.1",
-    "@types/node": "^24.0.14"
+    "@types/node": "^24.0.14",
+    "@types/ws": "^8.18.1"
   },
   "dependencies": {
     "dotenv": "^17.2.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "ws": "^8.18.3"
   }
 }
