--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "run_prettier": "prettier --write \"**/*.{ts,js,json}\"",
-    "test:ui": "npx playwright test --ui"
+    "test:ui": "npx playwright test --ui",
+    "run_linter": "npx eslint"
   },
   "author": "",
   "license": "ISC",
